// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Artwork /> should render empty success response 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c4 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem;
}

.c2 {
  display: inline-block;
  margin-bottom: 1rem;
}

@media screen and (min-width:768px) {

}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 Typography-sc-1pie2ao-1"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c4 Typography-sc-1pie2ao-1"
      font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
      font-size="18px"
    >
      No matching Artwork
    </div>
  </section>
</main>
`;

exports[`<Artwork /> should render loading state initially 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c4 {
  -webkit-animation: dDtqwY 1s infinite linear;
  animation: dDtqwY 1s infinite linear;
  position: absolute;
  background: #000;
  width: 25px;
  height: 6px;
  top: calc(50% - 6px / 2);
  left: calc(50% - 25px / 2);
}

.c0 {
  min-height: 100vh;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem;
}

.c2 {
  display: inline-block;
  margin-bottom: 1rem;
}

@media screen and (min-width:768px) {

}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 Typography-sc-1pie2ao-1"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c4"
      color="black100"
      height="6"
      width="25"
    />
  </section>
</main>
`;

exports[`<Artwork /> should render success response 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c6 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c7 {
  color: #000;
  -webkit-transition: color 0.25s;
  transition: color 0.25s;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem;
}

.c2 {
  display: inline-block;
  margin-bottom: 1rem;
}

.c5 {
  max-width: 100%;
  height: auto;
  max-height: 58vh;
  object-fit: contain;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {

}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3 Typography-sc-1pie2ao-1"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <figure
      class="c4"
    >
      <img
        alt=""
        class="c5"
        height="602"
        src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=600&height=602&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg"
        srcset="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=600&height=602&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg, https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=1200&height=1204&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg 2x"
        width="600"
      />
      <figcaption
        style="max-width: 600px;"
      >
        <div
          class="c6 Typography-sc-1pie2ao-1"
          font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          font-size="18px"
        >
          <strong>
            Hossam Dirar
          </strong>
        </div>
        <div
          class="c6 Typography-sc-1pie2ao-1"
          font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          font-size="18px"
        >
          Hossam Dirar, ‘Nefertiti’, 2018
        </div>
        <a
          class="c7"
          href="https://www.artsy.net/artwork/hossam-dirar-nefertiti-9"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="c6 Typography-sc-1pie2ao-1"
            font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
            font-size="18px"
          >
            Source
          </div>
        </a>
      </figcaption>
    </figure>
  </section>
</main>
`;
